# Titumir-LLM

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
configs/: config.yaml
scripts/: _llm.py  check_tokenizer.py  generate_dataset.py  merge_dataset.py  pull_dataset.py  push_dataset.py  refine_dataset.py
training/: config.py  cpt.py  export_to_gguf.py  sft.py
